--- a/JavaSEBasicoAvanzado/JavaSEBasicoAvanzado-32.AbstractClases/AmazonViewer/.classpath
+++ b/JavaSEBasicoAvanzado/JavaSEBasicoAvanzado-32.AbstractClases/AmazonViewer/.classpath
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/m.mata.jara/Documents/Git-Github/JAVA_Avanzado/JavaSEBasicoAvanzado/JavaSEBasicoAvanzado-32.AbstractClases/AmazonViewer/libs/makefile.jar"/>
+	<classpathentry kind="lib" path="libs/mysql-connector-java-8.0.22.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
